--- a/firstapp/src/main/webapp/index.html
+++ b/firstapp/src/main/webapp/index.html
@@ -5,18 +5,24 @@
 <title>Navigation</title>
 </head>
 <body>
-<a href="les2prac4.html"> Les 2, Practicum 4</a>
+
+<link rel="stylesheet"	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	
 <br>
-<a href="les2prac5.html"> Les 2, Practicum 5</a>
+<a href="les2prac4.html">-  Les 2, Practicum 4</a>
 <br>
-<a href="les3prac1.html"> Les 3, Practicum 1</a>
+<a href="les2prac5.html">-  Les 2, Practicum 5</a>
 <br>
-<a href="les3prac3.html"> Les 3, Practicum 3</a>
+<a href="les3prac1.html">-  Les 3, Practicum 1</a>
 <br>
-<a href="les5.html"> Les 5</a>
+<a href="les3prac3.html">-  Les 3, Practicum 3</a>
 <br>
-<a href="les6prac1-1.html"> Les 6 </a>
+<a href="les5.html">-  Les 5</a>
 <br>
-<a href="les8prac1.html"> Les 8 </a>
+<a href="les6prac1-1.html">-  Les 6 </a>
+<br>
+<a href="les8prac1.html">-  Les 8 </a>
+
+	
 </body>
 </html> 
