--- a/firstapp/src/main/webapp/les5.html
+++ b/firstapp/src/main/webapp/les5.html
@@ -4,7 +4,9 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Les 5</title>
+
 <link rel="stylesheet" href="style5.css" />
+
 <body>
 	<div class="container">
 		<div class="row">
@@ -15,7 +17,21 @@
 					</div>
 					<div class="panel-body">
 						<ul id="location-items">
-							<li>Loading Please wait...</li>
+							<li><label for=landcode>Land Code: <span
+									id="countrycode"></label></li>
+							<li><label for=land>Land: <span id="land"></label></li>
+							<li><label for=regio>Regio: <span id="regio"></label></li>
+							<li><label for=stad>Stad: <span id="stad"></label></li>
+							<li><label for=postcode>Postcode: <span
+									id="postcode"></label></li>
+							<li><label for=latitude>Latitude: <span
+									id="latitude"></label></li>
+							<li><label for=longitude>Longitude: <span
+									id="longitude"></label></li>
+							<li><label for=ip>IP: <span id="ip"></label></li>
+
+
+
 						</ul>
 					</div>
 				</div>
@@ -23,11 +39,23 @@
 			<div class="col-md-6">
 				<div class="panel panel-primary">
 					<div class="panel-heading">
-						<h3 class="panel-title">Weer</h3>
+						<h3 id="h3-1">Het Weer in</h3>
+
 					</div>
 					<div class="panel-body">
-						<ul id="weather-items">
-							<li>Loading Please wait...</li>
+						<ul id="weatherInfo">
+							<li><label for=temptatuur>Temptatuur: <span
+									id="temptatuur"></label></li>
+							<li><label for=luchtvochtigheid>Luchtvochtigheid: <span
+									id="luchtvochtigheid"></label></li>
+							<li><label for=windsnelheid>Windsnelheid: <span
+									id="windsnelheid"></label></li>
+							<li><label for=windrichting>Windrichting: <span
+									id="windrichting"></label></li>
+							<li><label for=zonsopgang>Zonsopgang: <span
+									id="zonsopgang"></label></li>
+							<li><label for=zonsondergang>Zonsondergang: <span
+									id="zonsondergang"></label></li>
 						</ul>
 					</div>
 				</div>
@@ -37,23 +65,22 @@
 			<div class="col-md">
 				<div class="panel panel-primary">
 					<div class="panel-heading">
-						<h3 class="panel-title">Bestemmingen</h3>
+						<h3 class="panel-title">Landen</h3>
 					</div>
 					<div class="panel-body">
-					<br>
+						<br>
 						<table class="table table-hover" id="destination-items">
 							<thead>
 								<tr>
 									<th>Land</th>
 									<th>Hoofdstad</th>
+									<th>Regio</th>
 									<th>Oppervlakte</th>
 									<th>Inwonders</th>
 								</tr>
 							</thead>
-							<tbody>
-								<tr>
-									<td>Loading please wait..</td>
-								</tr>
+							<tbody id="destination-items-body">
+
 							</tbody>
 						</table>
 					</div>
@@ -64,6 +91,6 @@
 	<script
 		src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<script src="lib/bootstrap//js/bootstrap.min.js"></script>
-	<script src="les5prac1.js"></script>
+	<script src="les5js.js"></script>
 </body>
 </html>
