--- a/firstapp/src/main/webapp/les6prac1-2.html
+++ b/firstapp/src/main/webapp/les6prac1-2.html
@@ -5,15 +5,15 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>value</title>
 <link rel="stylesheet"
-	href="/lib/bootstrap/css/bootstrap.min.css">
+	href="lib/bootstrap/css/bootstrap.min.css">
 <body>
 	<div class="container text-center">
-		<h1 id="value">Je hebt nog geen waarde ingevoerd</h1>
+		<h1 id="value"></h1>
 
 	</div>
 	<script
 		src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-	<script src="/lib/bootstrap//js/bootstrap.min.js"></script>
+	<script src="lib/bootstrap//js/bootstrap.min.js"></script>
 	<script src="les6-1-2.js"></script>
 </body>
 </html>
